Small fix for responsive design not working properly on mobile due to overflowing image.

--- a/static/css/styled.scss
+++ b/static/css/styled.scss
@@ -725,6 +725,10 @@ body {
 
         article {
             line-height: 160%;
+
+            img {
+                max-width: 100%;
+            }
         }
     }
 
